1999-08-04  Ulrich Drepper  <drepper@cygnus.com>

	* rt/aio_read.c: Fix return value.
	* rt/aio_read64.c: Likewise.
	Reported by Christian Gafton.

	* rt/aio_write.c: Fix return value.
	* rt/aio_write64.c: Likewise.
	* rt/aio_fsync.c: Likewise.

	* rt/aio_misc.c: Set errno at correct place.

1999-08-04  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/alpha/getsysstats.c (GET_NPROCS_PARSER):
	Initialize result to one.
	(GET_NPROCS_CONF_PARSER): Likewise.

1999-08-01  Ulrich Drepper  <drepper@cygnus.com>

	* dlfcn/dlerror.c: Make code thread-safe.

1999-07-31  Roland McGrath  <roland@baalperazim.frob.com>

	* hurd/intr-msg.c (_hurd_intr_rpc_mach_msg): Fix msgt_size member
	initializer in CHECK: a bit size, not the type code repeated!

1999-07-31  H.J. Lu  <hjl@gnu.org>

	* string/bits/string2.h (__strcpy_small): Fix a typo.

1999-07-31  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/i386/fpu/e_pow.S: Use addl %esp instead of pop.
	* sysdeps/i386/fpu/e_powf.S: Likewise.
	* sysdeps/i386/fpu/e_powl.S: Likewise.  [PR libc/1213].

	* sysdeps/generic/e_lgammal_r.c: Set *signgam to zero.
	* sysdeps/generic/e_gammal_r.c: Likewise.  [PR libc/1212].

1999-07-30  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/getsysstats.c (GET_NPROCS_PARSER): New
	definition.
	(__get_nprocs): Use it.
	(__get_nprocs_conf): Define as separate function if
	GET_NPROCS_CONF_PARSER is defined.
	* sysdeps/unix/sysv/linux/alpha/getsysstats.c: New file.

	* include/sys/sysinfo.h: New file.
	* sysdeps/generic/sys/sysinfo.h: Remove declaration of internal
	interface.
	* sysdeps/unix/sysv/linux/sys/sysinfo.h: Likewise.

1999-07-30  Andreas Schwab  <schwab@suse.de>

	* Makerules: Put sysd-versions and Versions.all on
	postclean-generated instead of common-generated.

1999-07-29  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* manual/time.texi (Basic CPU Time): Note that clock_t can wrap
	around and CLOCKS_PER_SEC is 1e6.

1999-07-29  Andreas Schwab  <schwab@suse.de>
